get all user and get user by id
