# src/controllers/interfaces/index.ts
@@ -5,7 +5,6 @@ export interface IHelloController{
 }
 
 export interface IUserController{
-    // Real all user from database
-    getUser(): Promise<any>
-    
+    // Get all user from database || Get user by id
+    getUser(id?:string): Promise<any>
 }
